1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Set the myfulldir and mydir variables (which are
		relative to buildtop and thisconfigdir, respectively.)

Fri Feb 27 18:03:33 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the lib/krb5
 		directory, since we've moved the configure.in tests in
 		this directory to the toplevel lib/krb5 configure.in

Wed Feb 18 16:25:34 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:01:50 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Sep 25 21:28:41 1997  Tom Yu  <tlyu@mit.edu>

	* rc_io.c: Replace KRB5_USE_INET with something more sane.

Tue Mar 25 01:15:39 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* rc_io.c (krb5_rc_io_open): rcache owner should be checked against
		the effective uid, not the real uid.  [krb5-libs/366]

Sat Feb 22 22:44:15 1997  Richard Basch  <basch@lehman.com>

	* Makefile.in: Use some of the new library list build rules in
		win-post.in

Thu Nov 21 11:55:16 EST 1996    Richard Basch   <basch@lehman.com>

        * Makefile.in: win32 build

	* rc_dfl.c, rc_dfl.h: Win32/DLL calling conventions for rcache
		functions.  (Most rcache routines are still not exported
		pending an API review).

Thu Jan  2 17:21:44 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new library build procedure.

Mon Nov 18 15:25:51 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* rc_dfl.c: Apply jik's fix to allow the expunging of the replay
		cache to happen correctly. [174,132]

Mon Jun 10 21:52:38 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* rc_io.c: Change _WINDOWS to _MSDOS, and add check for _WIN32.

Sat Feb 24 18:53:33 1996  Theodore Y. Ts'o  <tytso@dcl>

	* rc_io.c (krb5_rc_io_creat, krb5_rc_io_open): Use Windows path
		separator, if appropriate.  Under Windows also use the