@@ -1,3 +1,10 @@
+Tue Apr  6 16:10:44 1999  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* rc_io.c (krb5_rc_io_move): Workaround the fact that Windows has
+		really poor emulation of POSIX functions such as rename.
+		(In fact, it has completely different semantics for this
+		call!)  Fix supplied by Tom Sanfilippo (txn# 2184 in krb5dev)
+
 1998-11-13  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* Makefile.in: Set the myfulldir and mydir variables (which are
